# differential_gt

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/differential_gt/: arbitration.hpp  cgt.h  cgt.hpp  differential_gt.hpp  ncgt.h  ncgt.hpp  utils.hpp
launch/: differential_gt_sim.launch.py
saved_configs/: aggressive.txt  default.txt  mild_assistance.txt  pedrocchi.txt
src/: arbitration.cpp  cgt.cpp  dgt_node.cpp  differential_gt.cpp  differential_gt_main.cpp  ncgt.cpp  utils.cpp
src/differential_gt/: arbitration.cpp  cgt.cpp  dgt_node.cpp  ncgt.cpp
